--- a/index.html
+++ b/index.html
@@ -271,12 +271,12 @@ Ported from <a href="https://mak1t0.cc/" target="_blank" rel="noreferrer noopene
     <div class="post-list-container post-list-container-no-background">
         
             
-            <a href="https://lenux.netlify.app/posts/%E6%AF%95%E4%B8%9A/" class="a-block">
+            <a href="https://lenux.netlify.app/posts/%E6%AF%95%E4%B8%9A%E4%BA%86/" class="a-block">
                 <div class="post-item-wrapper">
                     <div class="post-item post-item-no-divider">
                         <div class="post-item-info-wrapper">
                             <div class="post-item-title">
-                                毕业!
+                                毕业了？
                             </div>
                             <div class="post-item-summary">
                                 三天！你知道我这三天怎么过来的吗！
