--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ Ported from <a href="https://mak1t0.cc/" target="_blank" rel="noreferrer noopene
     <div class="post-list-container post-list-container-no-background">
         
             
-            <a href="https://lenux.netlify.app/posts/ceshiyixia/" class="a-block">
+            <a href="https://lenux.netlify.app/posts/ceshi/" class="a-block">
                 <div class="post-item-wrapper">
                     <div class="post-item post-item-no-divider">
                         <div class="post-item-info-wrapper">
