--- a/about/index.html
+++ b/about/index.html
@@ -19,7 +19,8 @@
 <meta property="og:title" content="About" />
 <meta property="og:description" content="简介  😆耗时几天的小站终于建成，站在**小巨人**的肩膀上
 考研摸鱼选手，一战失败，准备通过本站进行记录日常或者可能知识输出？
- 建站初心就是想随便写写流水账，想到什么就写什么了文字不过脑子昂，毕竟计算机专业学生怎么能没有一个自己的博客。要问有什么意义，其实本人都是先做事再去想意义，意义多大完全取决于事情做的多大。
+思维跳跃。如果你能读懂我的奇怪，那你可能跟我一样可爱😉
+ 建站初心就是想随便写写流水账，想到什么就写什么了文字不过脑子昂，毕竟计算机专业学生怎么能没有一个自己的博客可能大多都没有吧。要问有什么意义，其实本人都是先做事再去想意义，意义多大取决于事情做的多大。
 一战失败的阴霾持续了一段时间，但时间都在向前走，如果一直停滞不前的话应该会与灵魂脱节。毕竟这次准备考试至少学会了鼓励式教学😇。
 当然本站虽说在客观上已建成完毕，但还有很多地方不满意，只是暂且如此，日后还会完善
 联系本人 目前比较繁忙不要联系我，日后再说🙃" />
@@ -37,7 +38,8 @@
 <meta name="twitter:title" content="About"/>
 <meta name="twitter:description" content="简介  😆耗时几天的小站终于建成，站在**小巨人**的肩膀上
 考研摸鱼选手，一战失败，准备通过本站进行记录日常或者可能知识输出？
- 建站初心就是想随便写写流水账，想到什么就写什么了文字不过脑子昂，毕竟计算机专业学生怎么能没有一个自己的博客。要问有什么意义，其实本人都是先做事再去想意义，意义多大完全取决于事情做的多大。
+思维跳跃。如果你能读懂我的奇怪，那你可能跟我一样可爱😉
+ 建站初心就是想随便写写流水账，想到什么就写什么了文字不过脑子昂，毕竟计算机专业学生怎么能没有一个自己的博客可能大多都没有吧。要问有什么意义，其实本人都是先做事再去想意义，意义多大取决于事情做的多大。
 一战失败的阴霾持续了一段时间，但时间都在向前走，如果一直停滞不前的话应该会与灵魂脱节。毕竟这次准备考试至少学会了鼓励式教学😇。
 当然本站虽说在客观上已建成完毕，但还有很多地方不满意，只是暂且如此，日后还会完善
 联系本人 目前比较繁忙不要联系我，日后再说🙃"/>
@@ -427,8 +429,9 @@ Ported from <a href="https://mak1t0.cc/" target="_blank" rel="noreferrer noopene
 <blockquote>
 <p>😆耗时几天的小站终于建成，站在**<a href="https://blathers23.netlify.app/%E6%B5%85%E5%85%A5%E6%B5%85%E5%87%BAhugo%E6%95%99%E7%A8%8B/#4-%E5%8F%91%E5%B8%83%E4%BD%A0%E7%9A%84%E9%A1%B5%E9%9D%A2">小巨人</a>**的肩膀上</p>
 <p>考研摸鱼选手，一战失败，准备通过本站进行记录日常或者<del>可能知识输出？</del></p>
+<p>思维跳跃。如果你能读懂我的奇怪，那你可能跟我一样可爱😉</p>
 </blockquote>
-<p>建站初心就是想随便写写流水账，想到什么就写什么了<del>文字不过脑子昂</del>，毕竟计算机专业学生怎么能没有一个自己的博客。要问有什么意义，其实本人都是先做事再去想意义，意义多大完全取决于事情做的多大。</p>
+<p>建站初心就是想随便写写流水账，想到什么就写什么了<del>文字不过脑子昂</del>，毕竟计算机专业学生怎么能没有一个自己的博客<del>可能大多都没有吧</del>。要问有什么意义，其实本人都是先做事再去想意义，意义多大取决于事情做的多大。</p>
 <p>一战失败的阴霾持续了一段时间，但时间都在向前走，如果一直停滞不前的话应该会与灵魂脱节。毕竟这次准备考试至少学会了鼓励式教学😇。</p>
 <p>当然本站虽说在客观上已建成完毕，但还有很多地方不满意，只是暂且如此，日后还会完善</p>
 <h1 id="联系本人">联系本人</h1>
