--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@ Ported from <a href="https://mak1t0.cc/" target="_blank" rel="noreferrer noopene
                                 瞎担心
                             </div>
                             <div class="post-item-summary">
-                                虽然他可能并不真实存在，但我已经开始担心他的未来了。
+                                虽然这些情况可能并不真实存在，但我已经开始担心这些主人公的未来了。
                             </div>
                             <div class="post-item-meta">
     2022-09-03
